# Termphonic

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md  index.html  install.sh  style.css  uninstall.sh
.github/workflows/: nightly.yml  release.yml
scripts/: install.sh  package-release.sh
src/: actions.rs  app.rs  main.rs  models.rs  runtime.rs  search.rs  session.rs  ui.rs
src/application/: actions.rs  mod.rs
src/domain/: mod.rs
src/infrastructure/: audio.rs  mod.rs  runtime.rs  search.rs  session.rs
src/presentation/: gui.rs  mod.rs
