[package]
name = "termphonic"
version = "0.1.0"
edition = "2024"
default-run = "termphonic"

[features]
default = []
gui = ["dep:eframe"]

[dependencies]
crossterm = "0.29.0"
eframe = { version = "0.34.3", optional = true, default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
flate2 = "1.1.5"
ratatui = "0.30.1"
rodio = "0.21.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10.9"
tokio = { version = "1.52.3", features = ["full"] }
unicode-width = "0.2.2"
tar = "0.4.44"

[[bin]]
name = "termphonic"
path = "src/main.rs"

[[bin]]
name = "termphonic-gui"
path = "src/bin/termphonic-gui.rs"
required-features = ["gui"]
